--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.9.1
 Pygments==2.13.0
+python-dotenv==0.20.0
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.4.0
